# final

./: .gitignore  README.md  app.py  main.py  pyproject.toml  requirements.txt  utils.py
finalog/: __init__.py  __main__.py  app.py  cli.py  config.py  utils.py
finalog/resources/: gemini.py  sheets.py
resources/: gemini.py  region_menu.py
resources/prompts/: context.txt  schemas.py
